Addressed all the comments other then comments given on videoService.go

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,10 +6,13 @@ server:
   gateway:
     port: "443"
 database:
-  name: "mongodb"
+  name: "YouCreo"
   uri: "mongodb+srv://orangekun101:mongo-user-pass@youcreo.vkxi3yl.mongodb.net/?retryWrites=true&w=majority"
+  collection:
+    video: "Video"
 aws:
   video:
     bucket: "youcreo-videos"
   thumbnail:
     bucket: "youcreo-thumbnails"
+  region: "eu-west-1"
